[gd_scene load_steps=7 format=2]

[ext_resource path="res://characters/player/player.gd" type="Script" id=1]
[ext_resource path="res://characters/player/images/ch_pl_03.png" type="Texture" id=2]
[ext_resource path="res://characters/player/images/sphere_02.png" type="Texture" id=3]
[ext_resource path="res://shared/effects/thruster.tscn" type="PackedScene" id=4]
[ext_resource path="res://shared/sfx/laser_01.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 116.203, 52.3678 )

[node name="player" type="Node2D" index="0"]

position = Vector2( 66.8938, 264.911 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
ship_speed = 20
max_armor = 0

[node name="Area2" type="Area2D" parent="." index="0"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Angular", "Collision", "Linear" ]

[node name="Sprite" type="Sprite" parent="Area2" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Offset" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2" index="1"]

visible = false
position = Vector2( 19.1596, 1.79621 )
shape = SubResource( 1 )

[node name="shield" type="Sprite" parent="." index="1"]

visible = false
modulate = Color( 1, 1, 1, 0.276235 )
position = Vector2( 20, 0 )
scale = Vector2( 0.28, 0.28 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Pause", "Region", "Transform", "Visibility", "Z Index" ]

[node name="thruster" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( -61.2578, 4.90063 )
z_index = -1

[node name="scene_container" type="Node" parent="." index="3"]

[node name="weapon_shoot" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = true

[node name="shield_deactivate" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="weapon_pu_deactivate" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="hyper_velocity_deactivate" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="laser_shooter" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 5 )
volume_db = -17.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Tween" type="Tween" parent="." index="9"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="area_entered" from="Area2" to="." method="_on_Area2_area_entered"]

[connection signal="timeout" from="weapon_shoot" to="." method="_on_weapon_shoot_timeout"]

[connection signal="timeout" from="shield_deactivate" to="." method="_on_shield_deactivate_timeout"]

[connection signal="timeout" from="weapon_pu_deactivate" to="." method="_on_weapon_pu_deactivate_timeout"]

[connection signal="timeout" from="hyper_velocity_deactivate" to="." method="_on_hyper_velocity_deactivate_timeout"]


